# interception-compose

./: .gitignore  CMakeLists.txt  flake.nix
src/: arrows.c  arrows.cpp  caps2leftctrl+esc.c  compose.c  ctrl-win-alt.c  event.c  event.h  hyper.c  keyboard-event-mapping.hpp  keycounter.cpp  keylogger.cpp
